--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>Index Page</title>
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.brown-red.min.css">
+  <link rel="stylesheet" href="/static/index.css">
+  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 </head>
 <body>
   <h1>Index Page</h1>
   <p>Hi there!</p>
+  <!-- Accent-colored raised button with ripple -->
+  <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+    Button
+  </button>
+  <!-- Colored FAB button -->
+  <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
+    <i class="material-icons">add</i>
+  </button>
 </body>
 </html>
