--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>Index Page</title>
 
+  <!-- Next tas is required for mobile applications -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.brown-red.min.css">
   <link rel="stylesheet" href="/static/index.css">
