--- a/static/index.css
+++ b/static/index.css
@@ -4,3 +4,12 @@ body {
   background: #fafafa;
   width: 900px;
 }
+
+.alert {
+  margin: 3px 0;
+  padding: 15px;
+  border: 1px solid #d6e9c6;
+  border-radius: 4px;
+  color: #3c763d;
+  background-color: #dff0d8;
+}
