--- a/templates/index.html
+++ b/templates/index.html
@@ -13,45 +13,17 @@
   <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 </head>
 <body>
-  <h1>Index Page</h1>
-  <p>Hi there!</p>
-  <!-- Accent-colored raised button with ripple -->
-  <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-    Button
-  </button>
-  <!-- Colored FAB button -->
-  <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
-    <i class="material-icons">add</i>
-  </button>
-  <ol id="list">
-    <li>0</li>
-    <li>1</li>
-    <li>2</li>
-  </ol>
+  <h3>Сообщение пропадет через секунду</h3>
 
 </body>
 <script>
-  var newLi = document.createElement('li');
-  newLi.innerHTML = "Привет, мир!";
-
-  list.insertBefore(newLi, list.children[2]);
-
   var div = document.createElement('div');
-  div.className = "alert";
-  div.innerHTML = "<strong>Ура!</strong> Вы прочитали это важно сообщение.";
+  div.className = 'alert alert-success';
+  div.innerHTML = "<strong>Ура!</strong> Вы прочитали это важное сообщение.";
 
-  document.body.insertBefore(div, document.body.firstChild);
-
-  // make a copy of the node
-  var div2 = div.cloneNode(true);
-  div2.querySelector('strong').innerHTML = "Супер!";
-  // вставим её после текущего сообщения
-  div.parentNode.insertBefore(div2, div.nextSibling);
-
-  var first = list.children[0],
-      second = list.children[1];
-
-  // нет необходимости в предварительном removeChild(second)
-  list.insertBefore(second, first); // поменять местами
+  document.body.appendChild(div);
+  setTimeout(function() {
+    div.parentNode.removeChild(div);
+  }, 1000);
 </script>
 </html>
