--- a/templates/index.html
+++ b/templates/index.html
@@ -12,18 +12,19 @@
   <link rel="stylesheet" href="/static/index.css">
   <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 </head>
+
 <body>
-  <h3>Сообщение пропадет через секунду</h3>
 
 </body>
+
 <script>
   var div = document.createElement('div');
   div.className = 'alert alert-success';
-  div.innerHTML = "<strong>Ура!</strong> Вы прочитали это важное сообщение.";
-
   document.body.appendChild(div);
-  setTimeout(function() {
-    div.parentNode.removeChild(div);
-  }, 1000);
+
+  var text =prompt("Введите текст для сообщения", "Жили были <a> и <b>!");
+
+  // вставиться именно как текстб без HTML-обработки
+  div.appendChild(document.createTextNode(text));
 </script>
 </html>
